# Kvasir

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Lib/Atomic/: Integral.hpp  Queue.hpp
Lib/Chip/CM0+/Atmel/ATSAMR21E17A/: SYSCTRL.hpp
Lib/Chip/CM0+/NXP/LPC11E6x_v0.8/: DMATRIGMUX.hpp
Lib/Chip/CM0/NXP/LPC11Cxx_v9/: CT32B0.hpp  CT32B1.hpp
Lib/Chip/CM3/NXP/LPC15xx_v0.7/: GINT0.hpp  I2C0.hpp  INMUX.hpp
Lib/Chip/CM3/NXP/LPC176x5x_v0.2/: USB.hpp  WDT.hpp
Lib/Chip/CM3/NXP/LPC178x_7x_v0.8/: USB.hpp
Lib/Chip/CM4/NXP/LPC408x_7x_v0.7/: PWM0.hpp  PWM1.hpp
Lib/Chip/CM4/NXP/LPC5410x_v0.4/: ADC0.hpp  ASYNCSYSCON.hpp  CRC.hpp  CT32B0.hpp  CT32B1.hpp  CT32B2.hpp  CT32B3.hpp  CT32B4.hpp  DMA.hpp  GINT0.hpp  GINT1.hpp  GPIO.hpp  I2C0.hpp  I2C1.hpp  I2C2.hpp  INPUTMUX.hpp  IOCON.hpp  MAILBOX.hpp  MRT.hpp  PINT.hpp  RIT.hpp  RTC.hpp  SCT0.hpp  SPI0.hpp  SPI1.hpp  SYSCON.hpp  USART0.hpp  USART1.hpp  USART2.hpp  USART3.hpp  UTICK.hpp  VFIFO.hpp  WWDT.hpp
Lib/Chip/CM4/Nordic/nrf52/: Io.hpp
Lib/Chip/Unknown/NXP/LPC11D14_svd_v4/: CT16B0.hpp  CT16B1.hpp  SYSCON.hpp
Lib/Chip/Unknown/NXP/LPC13xx_svd_v1/: FMC.hpp  SYSCON.hpp  WWDT.hpp
Lib/Chip/Unknown/Nuvoton/M051_Series/: EBI_CTL.hpp  FMC.hpp  GCR.hpp  GPIO.hpp  PWMA.hpp  PWMB.hpp  TMR0.hpp  TMR1.hpp  TMR2.hpp  TMR3.hpp  UART0.hpp  UART1.hpp  WDT.hpp
Lib/Chip/Unknown/Nuvoton/NUC100_Series/: CLK.hpp  EBI.hpp  FMC.hpp  GCR.hpp  GPIO.hpp  PS2.hpp  PWMA.hpp  PWMB.hpp  RTC.hpp  TMR0.hpp  TMR1.hpp  TMR2.hpp  TMR3.hpp  UART0.hpp  UART1.hpp  UART2.hpp  WDT.hpp
Lib/Common/: Core.hpp  Interrupt.hpp  Tags.hpp
Lib/Io/: Io.hpp  PinFactories.hpp  PortFactories.hpp  Types.hpp  Utility.hpp
Lib/Mpl/: Algorithm.hpp  IntegralConstants.hpp  Types.hpp  Utility.hpp
Lib/Register/: Apply.hpp  AtomicFactories.hpp  Exec.hpp  Factories.hpp  IsolatedFactories.hpp  Register.hpp  Seam.hpp  Types.hpp  Utility.hpp
Lib/Usb/: Cdc.hpp  Device.hpp  HalTraits.hpp  Memory.hpp  Packet.hpp  SetupPacket.hpp  Usb.hpp
Lib/Usb/Hal/Kinetis/: UsbHal.hpp.orig
Tools/ChipFromSvdGenerator/: MakeChipFiles.py
src/kvasir/sfr/: action_traits.hpp  apply.hpp  exec.hpp  factories.hpp  seam.hpp  sfr.hpp  types.hpp  utility.hpp
src/kvasir/sfr/chip/: GPIOA.hpp
test/: apply.cpp  usb.cpp
tests/: CMakeLists.txt  main.cpp  register_tests.cpp  test_chip.hpp  write_constant_tests.cpp  write_fixture.hpp  write_mixed_tests.cpp  write_runtime_tests.cpp  write_value_tests.cpp
